Changed toggle opening hours link to inline and set width to auto to avoid clicking on the "invisible" part

--- a/css/ddbasic.styles.css
+++ b/css/ddbasic.styles.css
@@ -7134,7 +7134,8 @@ ul.ui-autocomplete .ui-menu-item a:hover {
 @media only screen and (max-width: 768px) {
   /* line 149, ../sass/module/_libraries.scss */
   .opening-hours-toggle {
-    display: block;
+    display: inline;
+    width: auto;
   }
 }
 
