--- a/sass/module/_libraries.scss
+++ b/sass/module/_libraries.scss
@@ -176,7 +176,8 @@
 
   /* Media queries */
   @include small-medium() {
-    display: block;
+    display: inline;
+    width: auto;
   }
 }
 
